--- a/style.css
+++ b/style.css
@@ -3,12 +3,51 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+a {
+  color: #fefd27;
+}
 
 .app {
-  background-color: #fefd27;
+  background-color: #a04ab4;
   max-width: 600px;
-  margin: 50px auto;
+  margin: 45px auto;
   box-shadow: 0px 30px 50px rgba(65, 50, 100, 0.08);
   padding: 30px;
   border-radius: 15px;
+}
+header {
+  border-bottom: 1px solid #ead8fd;
+  padding: 0 0 30px 0;
+}
+
+.search-form-input {
+  background-color: #ead8fd;
+  border-radius: 6px;
+  border: none;
+  width: 70%;
+  font-size: 16px;
+  padding: 15px 20px;
+}
+.search-form-button {
+  background-color: #fefd27;
+  padding: 15px 20px;
+  border: none;
+  border-radius: 6px;
+  color: black;
+  margin-left: 10px;
+  font-size: 16px;
+}
+main {
+  padding: 30px 0;
+}
+footer {
+  border-top: 1px solid #ead8fd;
+  padding: 30px 0 0 0;
+  text-align: center;
+  font-size: 14px;
+  color: rgba(0, 0, 0, 0.6);
+}
+.app-data {
+  display: flex;
+  justify-content: space-between;
 }
