--- a/src/style.css
+++ b/src/style.css
@@ -76,6 +76,32 @@ main {
   margin-top: 6px;
   font-size: 28px;
 }
+.weather-forecast {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 30px;
+}
+.weather-forecast-date {
+  text-align: center;
+  color: rgba(39, 33, 66, 0.9);
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 10px;
+}
+.weather-forecast-icon {
+  font-size: 48px;
+  text-align: center;
+}
+.weather-forecast-temperatures {
+  text-align: center;
+  color: #290849;
+  display: flex;
+  margin-top: 10px;
+  justify-content: center;
+}
+.weather-forecast-temperature {
+  padding: 0 10px;
+}
 
 footer {
   border-top: 1px solid #ead8fd;
